Fix formatting problem on IE6 when choosing objects for new exhibit.

--- a/public/stylesheets/iehacks.css
+++ b/public/stylesheets/iehacks.css
@@ -13,3 +13,12 @@
 	margin:8px 0px 2px -30px;
 	width:320px;
 }
+
+#unchosen_objects {
+	width:190px;
+}
+
+#chosen_objects {
+	width:190px;
+}
+
